# cot-tampering

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/guides/: llm-sampling-guide.md  using_multiple_providers.md
experiments/configs/: aime_gpt_oss120b_openrouter.yaml  aime_gpt_oss120b_token_removal.yaml  aime_r1_openrouter.yaml  aime_r1_token_removal.yaml  alpaca_r1_openrouter.yaml  assessment.yaml  math500_gpt_oss120b_openrouter.yaml  math500_gpt_oss120b_sentence_removal.yaml  math500_gpt_oss120b_token_insertion.yaml  math500_gpt_oss120b_token_removal.yaml  math500_qwen3-235B-A22_openrouter.yaml  math500_qwq32b.yaml  math500_r1.yaml  math500_r1_0528_openrouter.yaml  math500_r1_openrouter.yaml  math500_r1_sentence_removal.yaml  math500_r1_token_insertion.yaml  math500_r1_token_removal.yaml  math500_standard_r1_openrouter.yaml  mmlu_claude_haiku_4_5_openrouter.yaml  mmlu_gpt_oss120b_token_insertion.yaml  mmlu_gpt_oss120b_token_removal.yaml  (+20 more)
notebooks/: control_dont_tamper.py  openrouter_sample.py  sample_llm_responses.py  sentence_removal_plot.py  test_mmlu_format.py  token_removal.py  token_removal_alpaca.py  token_removal_mmlu.py
plots/: cot_substitution_results.py  prefill_comparison.py
src/: dataset_loaders.py  nebius_client.py  openrouter_client.py  openrouter_completions_client.py  prompt_formatter.py  run_assessment.py  run_cot_substitution.py  run_prefill.py  run_sampling.py  run_sentence_removal.py  run_thinking_insertion.py  run_token_insertion.py  run_token_removal.py  sampling_config.py  thinking_trace_utils.py  utils.py
(+7 files in other folders)
